creditas-sf/force-app/main/default/objects/AddressDataSection__c/AddressDataSection__c.object-meta.xml
<CustomObject>
    <description>Objeto Utilizado apenas para o Squad AtWork</description>
    <label>Seção Dados de Endereço</label>
    <nameField>
        <displayFormat>DE-{00000}</displayFormat>
        <label>Seção Dados de Endereço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seção Dados de Endereço</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>