creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddOnObservation__c.field-meta.xml
<CustomField>
    <fullName>AddOnObservation__c</fullName>
    <label>Observação do complemento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>