creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddOnReason__c.field-meta.xml
<CustomField>
    <fullName>AddOnReason__c</fullName>
    <label>Motivo do complemento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>