creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddOnSubReason__c.field-meta.xml
<CustomField>
    <fullName>AddOnSubReason__c</fullName>
    <label>Sub-motivo do complemento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>