creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddressNumberObservation__c.field-meta.xml
<CustomField>
    <fullName>AddressNumberObservation__c</fullName>
    <label>Observação do Número</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>