creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddressNumberReason__c.field-meta.xml
<CustomField>
    <fullName>AddressNumberReason__c</fullName>
    <label>Motivo do número</label>
    <length>100</length>
    <type>Text</type>
</CustomField>