creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddressNumberStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressNumberStatus__c</fullName>
    <label>Status do Número</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovar</fullName>
            </value>
            <value>
                <fullName>Rejeitar</fullName>
            </value>
            <value>
                <fullName>Pendenciar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>