creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/AddressNumberSubReason__c.field-meta.xml
<CustomField>
    <fullName>AddressNumberSubReason__c</fullName>
    <label>Sub-motivo do número</label>
    <length>100</length>
    <type>Text</type>
</CustomField>