creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CEPobservation__c.field-meta.xml
<CustomField>
    <fullName>CEPobservation__c</fullName>
    <label>Observação do CEP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>