creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CEPreason__c.field-meta.xml
<CustomField>
    <fullName>CEPreason__c</fullName>
    <label>Motivo do CEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>