creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CEPsubReason__c.field-meta.xml
<CustomField>
    <fullName>CEPsubReason__c</fullName>
    <label>Sub-motivo do CEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>