creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CityObservation__c.field-meta.xml
<CustomField>
    <fullName>CityObservation__c</fullName>
    <label>Observação da cidade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>