creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CityReason__c.field-meta.xml
<CustomField>
    <fullName>CityReason__c</fullName>
    <label>Motivo da cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>