creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CitySubReason__c.field-meta.xml
<CustomField>
    <fullName>CitySubReason__c</fullName>
    <label>Sub-motivo da cidade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>