creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CountryObservation__c.field-meta.xml
<CustomField>
    <fullName>CountryObservation__c</fullName>
    <label>Observação do país</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>