creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CountryReason__c.field-meta.xml
<CustomField>
    <fullName>CountryReason__c</fullName>
    <label>Motivo do país</label>
    <length>100</length>
    <type>Text</type>
</CustomField>