creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/CountrySubReason__c.field-meta.xml
<CustomField>
    <fullName>CountrySubReason__c</fullName>
    <label>Sub-motivo do país</label>
    <length>100</length>
    <type>Text</type>
</CustomField>