creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/NeighborhoodObservation__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodObservation__c</fullName>
    <label>Observação do bairro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>