creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/NeighborhoodReason__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodReason__c</fullName>
    <label>Motivo do bairro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>