creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/NeighborhoodStatus__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodStatus__c</fullName>
    <label>Status do Bairro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovar</fullName>
            </value>
            <value>
                <fullName>Rejeitar</fullName>
            </value>
            <value>
                <fullName>Pendenciar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>