creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/NeighborhoodSubReason__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodSubReason__c</fullName>
    <label>Sub-motivo do bairro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>