creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/StateObservation__c.field-meta.xml
<CustomField>
    <fullName>StateObservation__c</fullName>
    <label>Observação do estado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>