creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/StateReason__c.field-meta.xml
<CustomField>
    <fullName>StateReason__c</fullName>
    <label>Motivo do estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>