creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/StateSubReason__c.field-meta.xml
<CustomField>
    <fullName>StateSubReason__c</fullName>
    <label>Sub-motivo do estado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>