creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/StreetAddressObservation__c.field-meta.xml
<CustomField>
    <fullName>StreetAddressObservation__c</fullName>
    <label>Observação da rua</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>