creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/StreetAddressReason__c.field-meta.xml
<CustomField>
    <fullName>StreetAddressReason__c</fullName>
    <label>Motivo da rua</label>
    <length>100</length>
    <type>Text</type>
</CustomField>