creditas-sf/force-app/main/default/objects/AddressDataSection__c/fields/StreetAddressSubReason__c.field-meta.xml
<CustomField>
    <fullName>StreetAddressSubReason__c</fullName>
    <label>Sub-motivo da rua</label>
    <length>100</length>
    <type>Text</type>
</CustomField>